[gd_scene load_steps=7 format=2]

[ext_resource path="res://NPC/picture/interact-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://NPC/picture/grandpa.png" type="Texture" id=2]
[ext_resource path="res://NPC/script/Merrick_manor.gd" type="Script" id=3]
[ext_resource path="res://intro/tres/talkAt.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.0
height = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 26.0768

[node name="Merrick_manor" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -17 )
scale = Vector2( 1.1875, 1.33333 )
texture = ExtResource( 2 )
hframes = 3
vframes = 4
frame = 7
region_rect = Rect2( 18, 17, 13, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, -6 )
shape = SubResource( 1 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -1, -13 )
shape = SubResource( 2 )

[node name="TextureButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( -28, -43 )
scale = Vector2( 0.165625, 0.0888889 )
normal = ExtResource( 1 )

[node name="talk_box" parent="." instance=ExtResource( 4 )]
position = Vector2( 1, -29 )

[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
